# speak_out_loud

./: CHANGELOG.md  CMakeLists.txt  README.md  README.ru.md  TESTS.md  package.xml
action/: Speak.action
examples/simple_client/: sol_simple_client.py
examples/simple_client_action_iface/: sol_simple_client_action_iface.py
examples/turtlesim/: speak_out_loud_turtle_sim.launch  speak_out_loud_turtle_sim.py
launch/: speak_out_loud.launch  speak_out_loud_client_action_iface_example.launch  speak_out_loud_client_example.launch
msg/: Priority.msg
scripts/: sol_server.py  speak_out_loud_client_example_node.py  speak_out_loud_hub_node.py
src/: speak_out_loud_action_srv.cpp
srv/: SpeakFilter.srv
